--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                         <span class="project-status">1</span>
                     </div>
                     <div class="project-body">
-                        <h3 class="project-title">Automated Infrastructure Monitoring and Alerting System</h3>
+                        <h3 class="project-title"><a href="https://github.com/N-jquao/monitoring_system/">Automated Infrastructure Monitoring and Alerting System</a></h3>
                         <p class="project-description">
                             Built a comprehensive monitoring solution using tools like Wazuh and Solarwinds.
                         </p>
