--- a/index.html
+++ b/index.html
@@ -753,6 +753,24 @@
                     </div>
                 </div>
 
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <span class="project-icon">🔒</span>
+                        <span class="project-status">2</span>
+                    </div>
+                    <div class="project-body">
+                        <h3 class="project-title"><a href="">Bash Shell Script that Automates Backups</a></h3>
+                        <p class="project-description">
+                            Created a Linux Bash Shell script that automates backups, carries out integrity checks on those backups, and send notifications of backup status.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">Linux Bash Shell Scripting</span>
+                            <span class="tag">Automation</span>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="project-card">
                     <div class="project-header">
                         <span class="project-icon">🔒</span>
