--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                         <span class="project-status">2</span>
                     </div>
                     <div class="project-body">
-                        <h3 class="project-title"><a href="">Bash Shell Script that Automates Backups</a></h3>
+                        <h3 class="project-title"><a href="https://github.com/N-jquao/Shell_Script_Automation/tree/main">Bash Shell Script that Automates Backups</a></h3>
                         <p class="project-description">
                             Created a Linux Bash Shell script that automates backups, carries out integrity checks on those backups, and send notifications of backup status.
                         </p>
