--- a/index.html
+++ b/index.html
@@ -700,7 +700,18 @@
                 <h2 class="section-title">EXPERIENCE</h2>
                 <div class="section-line"></div>
             </div>
+
             <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date">January 2025 - Present</div>
+                    <h3 class="timeline-role">Systems Administrator/Operations Associate</h3>
+                    <div class="timeline-company">Swift Route Limited Ghana (Accra, Ghana)</div>
+                    <p class="timeline-description">
+                     Providing operational support for Linux-based systems. Executing system stability tasks, routine maintenance, and disciplined operations.
+                    </p>
+                </div>
+
+                <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-date">Q4 2025</div>
                     <h3 class="timeline-role">Linux Programming Certificate</h3>
@@ -737,7 +748,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
-                        <span class="project-icon">🚀</span>
+                        <!-- <span class="project-icon">🚀</span> -->
                         <span class="project-status">1</span>
                     </div>
                     <div class="project-body">
@@ -756,13 +767,13 @@
 
                 <div class="project-card">
                     <div class="project-header">
-                        <span class="project-icon">🔒</span>
+                        <!-- <span class="project-icon">🔒</span> -->
                         <span class="project-status">2</span>
                     </div>
                     <div class="project-body">
                         <h3 class="project-title"><a href="https://github.com/N-jquao/Shell_Script_Automation/tree/main">Bash Shell Script that Automates Backups</a></h3>
                         <p class="project-description">
-                            Created a Linux Bash Shell script that automates backups, carries out integrity checks on those backups, and send notifications of backup status.
+                            Created a Linux Bash Shell script that automates backups, carries out integrity checks, and notifies when completed.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Linux Bash Shell Scripting</span>
@@ -773,7 +784,7 @@
                 
                 <div class="project-card">
                     <div class="project-header">
-                        <span class="project-icon">🔒</span>
+                        <!-- <span class="project-icon">🔒</span> -->
                         <span class="project-status">3</span>
                     </div>
                     <div class="project-body">
