--- a/index.html
+++ b/index.html
@@ -701,14 +701,15 @@
                 <div class="section-line"></div>
             </div>
 
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-date">January 2025 - Present</div>
-                    <h3 class="timeline-role">Systems Administrator/Operations Associate</h3>
-                    <div class="timeline-company">Swift Route Limited Ghana (Accra, Ghana)</div>
-                    <p class="timeline-description">
-                     Providing operational support for Linux-based systems. Executing system stability tasks, routine maintenance, and disciplined operations.
-                    </p>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-date">January 2025 - Present</div>
+                        <h3 class="timeline-role">Systems Administrator/Operations Associate</h3>
+                        <div class="timeline-company">Swift Route Limited Ghana (Accra, Ghana)</div>
+                        <p class="timeline-description">
+                         Providing operational support for Linux-based systems. Executing system stability tasks, routine maintenance, and disciplined operations.
+                        </p>
+                    </div>
                 </div>
 
                 <div class="timeline">
