--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
             </div>
 
                 <div class="timeline">
-                    <div class="timeline-item">
+                <div class="timeline-item">
                         <div class="timeline-date">January 2025 - Present</div>
                         <h3 class="timeline-role">Systems Administrator/Operations Associate</h3>
                         <div class="timeline-company">Swift Route Limited Ghana (Accra, Ghana)</div>
@@ -710,9 +710,7 @@
                          Providing operational support for Linux-based systems. Executing system stability tasks, routine maintenance, and disciplined operations.
                         </p>
                     </div>
-                </div>
-
-                <div class="timeline">
+                    
                 <div class="timeline-item">
                     <div class="timeline-date">Q4 2025</div>
                     <h3 class="timeline-role">Linux Programming Certificate</h3>
@@ -772,7 +770,7 @@
                         <span class="project-status">2</span>
                     </div>
                     <div class="project-body">
-                        <h3 class="project-title"><a href="https://github.com/N-jquao/Shell_Script_Automation/tree/main">Bash Shell Script that Automates Backups</a></h3>
+                        <h3 class="project-title"><a href="https://github.com/N-jquao/Shell_Script_Automation/tree/main">Bash Shell Script that Automates Backups and Notifies Owner</a></h3>
                         <p class="project-description">
                             Created a Linux Bash Shell script that automates backups, carries out integrity checks, and notifies when completed.
                         </p>
