--- a/index.html
+++ b/index.html
@@ -770,9 +770,9 @@
                         <span class="project-status">2</span>
                     </div>
                     <div class="project-body">
-                        <h3 class="project-title"><a href="https://github.com/N-jquao/Shell_Script_Automation/tree/main">Bash Shell Script that Automates Backups and Notifies Owner</a></h3>
+                        <h3 class="project-title"><a href="https://github.com/N-jquao/Shell_Script_Automation/tree/main">Bash Shell Script that Automates Backups and Completion Notification</a></h3>
                         <p class="project-description">
-                            Created a Linux Bash Shell script that automates backups, carries out integrity checks, and notifies when completed.
+                            Created a Linux Bash Shell script that automates backups, integrity checks, and completion notifications.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Linux Bash Shell Scripting</span>
