--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                 <div class="skill-card">
                     <div class="skill-category">Cloud & DevOps</div>
                     <h3 class="skill-name">Cloud Infrastructure</h3>
-                    <p class="skill-items">Docker</p>
+                    <p class="skill-items">Docker • Azure</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 92%;"></div>
                     </div>
@@ -658,7 +658,7 @@
                 <div class="skill-card">
                     <div class="skill-category">Automation</div>
                     <h3 class="skill-name">CI/CD & Automation</h3>
-                    <p class="skill-items">GitHub • Jenkins</p>
+                    <p class="skill-items">GitHub • GitLab • Jenkins</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 90%;"></div>
                     </div>
