--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 <div class="skill-card">
                     <div class="skill-category">Programming</div>
                     <h3 class="skill-name">Development</h3>
-                    <p class="skill-items">Bash/Shell • PHP • JavaScript/TypeScript • HTML • CSS</p>
+                    <p class="skill-items">Bash/Shell • JavaScript • HTML • CSS</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 88%;"></div>
                     </div>
