--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                 <div class="skill-card">
                     <div class="skill-category">Security</div>
                     <h3 class="skill-name">Security & Compliance</h3>
-                    <p class="skill-items">Compliance (PCI DSS, HIPAA, CIS)</p>
+                    <p class="skill-items">Compliance (PCI DSS, CIS)</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 85%;"></div>
                     </div>
