--- a/index.html
+++ b/index.html
@@ -787,14 +787,15 @@
                         <span class="project-status">3</span>
                     </div>
                     <div class="project-body">
-                        <h3 class="project-title">Multi-Server Configuration Management with Ansible</h3>
+                        <h3 class="project-title">Kenkins Web App CI/CD Pipeline</h3>
                         <p class="project-description">
-                            Created an Ansible playbook collection that automated the deployment and configuration of a typical web application
-                            stack across multiple servers. 
+                            Created an Jenkins CI/CD Pipeline for a Simple Node.js Web App. 
                         </p>
                         <div class="project-tags">
-                            <span class="tag">Ansible</span>
-                            <span class="tag">Multiple Web Server Deployment</span>
+                            <span class="tag">Jenkins</span>
+                            <span class="tag">Cloud</span>
+                            <span class="tag">On-prem VMs</span>
+                            <span class="tag">CI/CD Pipelines</span>
                         </div>
                     </div>
                 </div>          
