--- a/index.html
+++ b/index.html
@@ -787,14 +787,14 @@
                         <span class="project-status">3</span>
                     </div>
                     <div class="project-body">
-                        <h3 class="project-title">Kenkins Web App CI/CD Pipeline</h3>
+                        <h3 class="project-title">Jenkins Web App CI/CD Pipeline</h3>
                         <p class="project-description">
-                            Created an Jenkins CI/CD Pipeline for a Simple Node.js Web App. 
+                            Created a Jenkins CI/CD Pipeline for a simple Node.js web app. 
                         </p>
                         <div class="project-tags">
                             <span class="tag">Jenkins</span>
                             <span class="tag">Cloud</span>
-                            <span class="tag">On-prem VMs</span>
+                            <span class="tag">On-Prem VMs</span>
                             <span class="tag">CI/CD Pipelines</span>
                         </div>
                     </div>
