--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                         <span class="project-status">3</span>
                     </div>
                     <div class="project-body">
-                        <h3 class="project-title">Jenkins Web App CI/CD Pipeline</h3>
+                        <h3 class="project-title"><a href="https://github.com/N-jquao/jenkins_web_app">Jenkins Web App CI/CD Pipeline</a></h3>
                         <p class="project-description">
                             Created a Jenkins CI/CD Pipeline for a simple Node.js web app. 
                         </p>
